# gt-dataslicer

./: .gitignore  AGENTS.md  CODE_REVIEW.md  DESIGN.md  HARDENING_LEDGER.md  IMPLEMENTATION_PLAN.md  README.md  REQUIREMENTS.md  REQUIREMENTS.txt  pyproject.toml  requirements-release.txt
packaging/pyinstaller/: dataslicer.spec  dataslicer_launcher.py
scripts/: build-dataslicer.ps1
src/gt_dataslicer/: __init__.py  artifacts.py  cli.py  config.py  derived.py  exceptions.py  i18n.py  inputs.py  logging_utils.py  report.py  runner.py
src/gt_dataslicer/engine/: __init__.py  duckdb_engine.py
src/gt_dataslicer/export/: csv.py  excel.py  parquet.py
src/gt_dataslicer/filters/: __init__.py  ast.py  compiler.py  grammar.lark  parser.py  types.py
src/gt_dataslicer/ui/: __init__.py  api.py  app.py  filters.py  jobs.py
src/gt_dataslicer/ui/web/: app.js  index.html  styles.css
tests/integration/: test_cli.py  test_ui_launch.py
tests/unit/: test_artifacts.py  test_compiler.py  test_config.py  test_derived.py  test_engine.py  test_excel.py  test_freezing.py  test_i18n.py  test_inputs.py  test_parser.py  test_repository_hygiene.py  test_runner.py  test_ui_api.py  test_ui_assets.py  test_ui_filters.py  test_ui_jobs.py
