[project]
name = "gt-dataslicer"
version = "0.1.0"
description = "Filter large CSV, Parquet, Excel, and ZIP-delivered files with a safe expression DSL."
requires-python = ">=3.14"
dependencies = [
    "duckdb",
    "lark",
    "openpyxl",
    "pywebview",
    "pyyaml",
    "pyzipper",
    "xlsxwriter",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]
freeze = [
    "pillow",
    "pyinstaller",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
